--- a/FDFS-GENAI-Python/Practisecode.ipynb
+++ b/FDFS-GENAI-Python/Practisecode.ipynb
@@ -181,17 +181,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Print addition value of 20 and 10 is 30\n",
-      "Print subraction value of 20 and 10 is 10\n",
-      "Print multipy value of 20 and 10 is 200\n",
-      "Print division value of 20 and 10 is 2.0\n"
+      "Print addition value of 30 and 10 is 40\n",
+      "Print subraction value of 30 and 10 is 20\n",
+      "Print multipy value of 30 and 10 is 300\n",
+      "Print division value of 30 and 10 is 3.0\n"
      ]
     }
    ],
@@ -199,9 +199,9 @@
     "a = int(input(\"Enter the number a: \"))\n",
     "b = int(input(\"Enter the number b: \"))\n",
     "c = a+b\n",
-    "print(f\"Print addition value of {,} and {,} is {.}\",a,b,c)\n",
+    "print(f\"Print addition value of {a} and {b} is {c}\")\n",
     "c = a-b\n",
-    "print(f\"Print subraction value of {.} and {.} is {.}\",a,b,c)\n",
+    "print(f\"Print subraction value of {a} and {b} is {c}\")\n",
     "c = a*b\n",
     "print(f\"Print multipy value of {a} and {b} is {c}\")\n",
     "c = a/b\n",
@@ -250,11 +250,333 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "simple_interest is 2100.0\n",
+      "compound_interest is 2250.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "P=int(input(\"enter the principle\"))\n",
+    "R=float(input(\"enter the interest\"))\n",
+    "N=int(input(\"Enter the number of Years\"))\n",
+    "\n",
+    "\n",
+    "def simple_interest(P,N,R):\n",
+    "    SI=(P*N*R)/100\n",
+    "    print(f\"simple_interest is {SI}\")\n",
+    "\n",
+    "def compound_interest(P,N,R):\n",
+    "    CI=(P*(1+(R/100))**N)-P\n",
+    "    print(f\"compound_interest is {round(CI,0)}\")\n",
+    "\n",
+    "simple_interest(P,N,R)\n",
+    "compound_interest(P,N,R)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conditional statements\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Print 20 is greater\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input(\"Enter number : \"))\n",
+    "b=int(input(\"Enter number : \"))\n",
+    "\n",
+    "if a>b:\n",
+    "    print(f\"Print {a} is greater\")\n",
+    "else:\n",
+    "    print(f\" Print {b} is greater\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Print 90 is greater than -90 and 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input(\"Enter the number :\"))\n",
+    "b=int(input(\"Enter the number :\"))\n",
+    "c=int(input(\"Enter the number :\"))\n",
+    "\n",
+    "if (a>b)&(a>c):\n",
+    "    print(f\"Print {a} is greater than {b} and {c}\")\n",
+    "elif(b>c):\n",
+    "    print(f\"Print {b} is greater than {a} and {c}\")\n",
+    "else:\n",
+    "    print(f\"Pirnt {c} is greater than {a} and {b}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### number is even or odd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Year is leap year or non-leap year"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### BMI value is normal or lean or between the limits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number is odd 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=int(input(\"Enter number num: \"))\n",
+    "def oddoreven(num):\n",
+    "    if num%2==0:\n",
+    "        print(f\"The number is even {num}\")\n",
+    "    else:\n",
+    "        print(f\"The number is odd {num}\")\n",
+    "\n",
+    "oddoreven(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Year is leap-year 1900\n"
+     ]
+    }
+   ],
+   "source": [
+    "Year=int(input(\"Enter the year :\"))\n",
+    "def leapyearornot(Year):\n",
+    "    if Year%4==0 & Year%400==0:\n",
+    "        print(f\"The Year is leap-year {Year}\")\n",
+    "    \n",
+    "    elif Year%100==0 or Year%400!=0:\n",
+    "        print(\"The Year is non-leap year\")\n",
+    "        \n",
+    "    else:\n",
+    "        print(\"The year is non leap year\")\n",
+    "\n",
+    "leapyearornot(Year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Is positive\n",
+      "2 Is positive\n",
+      "3 Is positive\n",
+      "4 Is positive\n",
+      "5 Is positive\n",
+      "-5 is negative\n",
+      "-4 is negative\n",
+      "-3 is negative\n",
+      "-2 is negative\n",
+      "-1 is negative\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,2,3,4,5,-5,-4,-3,-2,-1]\n",
+    "index=0\n",
+    "while index<len(a):\n",
+    "    if a[index]>0:\n",
+    "        print(f\"{a[index]} Is positive\")\n",
+    "    else:\n",
+    "        print(f\"{a[index]} is negative\")\n",
+    "    index+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,2,3,4,5]\n",
+    "i=0\n",
+    "while i<len(a):\n",
+    "    T=a[i]*a[i]\n",
+    "    print(T)\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "6\n",
+      "24\n",
+      "120\n",
+      "720\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,2,3,4,5]\n",
+    "result=1\n",
+    "\n",
+    "for item in range(1,item+2):\n",
+    "    result*=item\n",
+    "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "6\n",
+      "24\n",
+      "120\n",
+      "720\n",
+      "5040\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,2,3,4,5]\n",
+    "result=1\n",
+    "for item in range(1,item+2):\n",
+    "    result*=item\n",
+    "    print(result,)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyspark"
+    "a=[1,2,3,4,5]\n",
+    "index=0\n",
+    "\n",
+    "while index > len(a):\n",
+    "    print(a[index])\n",
+    "    index+=2\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create funtion to find out area and perimeter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Perimeter of square 25\n",
+      "Area of square 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input(\"Enter the side\"))\n",
+    "\n",
+    "def perimeter(a):\n",
+    "    perimeter=a*a\n",
+    "    print(f\"Perimeter of square {perimeter}\")\n",
+    "\n",
+    "def area(a):\n",
+    "    area=4*a\n",
+    "    print(f\"Area of square {area}\")\n",
+    "\n",
+    "perimeter(a)\n",
+    "area(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LCM and HCF"
    ]
   },
   {
@@ -262,14 +584,65 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x=int(input(\"Enter the number x\"))\n",
+    "y=int(input(\"Enter the number y\"))\n",
+    "\n",
+    "def LCM(x,y):\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n = int(input().strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Candiate Failed\n"
+     ]
+    }
+   ],
+   "source": [
+    "Name=input(\"Enter the name\")\n",
+    "Tamil=float(input(\"Enter the tamil marks\"))\n",
+    "English=float(input(\"Enter the English marks\"))\n",
+    "Science=float(input(\"Enter the Science marks\"))\n",
+    "Social=float(input(\"Enter the social marks\"))\n",
+    "Maths=float(input(\"Enter the Maths marks\"))\n",
+    "Pass=40\n",
+    "\n",
+    "\n",
+    "def Totalmarks(Tamil,English,Science,Social,Maths):\n",
+    "    Total=((Tamil+English+Science+Social+Maths)/500)*100\n",
+    "    \n",
+    "    if Total<Pass or Tamil<Pass or English<Pass or Science<Pass or Social<Pass or Maths<Pass:\n",
+    "            print(\"Candidate Failed needs reappear\")\n",
+    "    else:\n",
+    "        if Total>90 and Total<=100 or Tamil<Pass or English<Pass or Science<Pass or Social<Pass or Maths<Pass:\n",
+    "            print(f\"Candidate passed {round(Total,1)} and secured A\")\n",
+    "        elif Total>80 and Total<=89 or Tamil<Pass or English<Pass or Science<Pass or Social<Pass or Maths<Pass:\n",
+    "            print(f\"Candidate passed {round(Total,1)} and secured B\")\n",
+    "        elif Total>70 and Total<=79 or Tamil<Pass or English<Pass or Science<Pass or Social<Pass or Maths<Pass:\n",
+    "            print(f\"Candidate passed {round(Total,1)} and secured C\")\n",
+    "        elif Total>60 and Total<=69 or Tamil<Pass or English<Pass or Science<Pass or Social<Pass or Maths<Pass:\n",
+    "            print(f\"Candidate passed {round(Total,1)} and secured D\")\n",
+    "        elif Total<60 or Tamil<Pass or English<Pass or Science<Pass or Social<Pass or Maths<Pass:\n",
+    "            print(f\"Candidate failed {round(Total,1)} and needs reappear F\")\n",
+    "\n",
+    "Totalmarks(Tamil,English,Science,Social,Maths)\n"
+   ]
   },
   {
    "cell_type": "code",
