--- a/FDFS-GENAI-Python/funtions.ipynb
+++ b/FDFS-GENAI-Python/funtions.ipynb
@@ -97,7 +97,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Total=70\n",
+    "=avg(Total)/100"
+   ]
   },
   {
    "cell_type": "code",
