--- a/FDFS-GENAI-Python/Assignment.ipynb
+++ b/FDFS-GENAI-Python/Assignment.ipynb
@@ -112,20 +112,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n",
-      "The list is empty\n"
+      "[12]\n"
      ]
     }
    ],
    "source": [
-    "E=[1,3,6,8,9,10]\n",
+    "E=[1,3,6,8,9,10,12]\n",
     "T=[2,5,7,11,12,14]\n",
     "\n",
     "items_f=[]\n",
@@ -140,11 +139,12 @@
     "    if item not in items_f:\n",
     "        items_f.append(item)\n",
     "\n",
-    "if not items_f:\n",
-    "    print(\"The list is empty\")\n",
-    "else:\n",
-    "    print(\"The list is not empty\")\n",
-    "    print(items_f)\n",
+    "#if not items_f:\n",
+    " #   print(\"The list is empty\")\n",
+    "\n",
+    "#else:\n",
+    " #   print(\"The list is not empty\")\n",
+    "  #  print(items_f)\n",
     "    \n",
     "        \t    "
    ]
@@ -179,7 +179,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "``"
+   ]
   },
   {
    "cell_type": "code",
